# eihead

./: EXPORT_MANIFEST.json  README.md  pyproject.toml
apps/: __init__.py
config/: eibrain.honjia.yaml  eihead.honjia.yaml
deploy/: install_immutable_release.sh
docs/: eihead-code-completion-checklist.md  eihead-cutover-checklist.md  eihead-deployment-plan.md  eihead-implementation-plan.md  eihead-migration-audit.md
eibrain/: __init__.py
eihead/: __init__.py
eiprotocol/: __init__.py  builders.py  catalog.py  codec.py  event_routing.py  models.py  validation.py
tests/: test_capability_live_probe.py  test_capability_registry.py  test_deploy_systemd.py  test_eihead_config.py  test_eihead_ear_realtime.py  test_eihead_eye_adapters.py  test_eihead_eye_gstreamer.py  test_eihead_eye_hailo_metadata.py  test_eihead_eye_identity.py  test_eihead_eye_identity_memory.py  test_eihead_eye_realtime.py  test_eihead_eye_realtime_monitoring.py  test_eihead_eye_scene_events.py  test_eihead_eye_service.py  test_eihead_eye_vision_loop.py  test_eihead_local_protocol.py  test_eihead_monitoring_neck.py  test_eihead_monitoring_realtime_vision.py  test_eihead_mouth_playback.py  test_eihead_neck_yaw.py  test_eihead_protocol_observations.py  test_eihead_vision_tracking.py  test_eihead_voice_manual_test.py  test_eivoice_acoustic_frontend.py  test_eivoice_cloud_providers.py  test_eivoice_gateway.py  test_eivoice_hardware_audio.py  test_eivoice_runtime_core.py  test_eivoice_runtime_monitoring.py  test_eivoice_runtime_openclaw_transport.py  test_eivoice_runtime_transport.py  (+19 more)
(+179 files in other folders)
