[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eihead"
version = "0.1.0"
description = "Standalone head node runtime for the ei-hongtu system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0", "eiprotocol>=0.1.0"]

[project.scripts]
eihead-runtime = "eihead.runtime.cli:main"

[tool.setuptools.packages.find]
include = [
    "eihead*",
    "apps",
    "apps.head_runtime*",
]
exclude = ["config*", "tests*", "docs*", "scripts*", "deploy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
